Removed unrelated slide.

--- a/public/ValueCaseForUnitTests/index.html
+++ b/public/ValueCaseForUnitTests/index.html
@@ -9,6 +9,7 @@
         <meta name="description" content="Making the value case for unit tests">
         <meta name="author" content="Dan Ackroyd">
         <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="viewport" content="minimal-ui">
         <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
@@ -450,7 +451,7 @@
       <rect x="-2" y="-2" width="254" height="254" style="fill:black;"  />
       <image x="0" y="0" width="250" height="250" xlink:href="assets/img/PHP_CEO.jpeg" />
       
-      <text x="262" y="2" fill="rgb(0, 0, 0)" font-family="Comic Sans, Comic Sans MS, cursive">
+      <text x="262" y="2" fill="rgb(0, 0, 0)" font-family="Comic Sans, Comic Sans MS, arial, san serif">
         <tspan x="262" dy="1.2em">I THOUGHT YOU SAID</tspan>
         <tspan x="262" dy="1.2em">TESTS WERE GOING TO</tspan>
         <tspan x="262" dy="1.2em">FIX PRODUCTIVITY</tspan>
