Added CV to docs.

--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,12 @@
 <a href="https://wiki.php.net/rfc/internal_constructor_behaviour">Constructor behaviour of internal classes</a> - passed PHP 7.0 <br/>
 <a href="https://gist.github.com/Danack/5ae0b1b1ce30a0d785dd">Improved error control operator</a> - draft<br/>
 
+
+<h2>CV</h2>
+
+
+<a href="/CV.html">A CV that desperately needs revising</a><br/>
+
+
 </body>
 </html>
