--- a/public/CV.html
+++ b/public/CV.html
@@ -12,11 +12,10 @@
 <h2>Profile</h2>
 
 <p>
-A multi-skilled software engineer with excellent communication skills and a flair for learning new languages. Has excelled in the technically challenging video game industry. A team player with a can do attitude. Proven technical, scheduling and team working skills, on challenging multi-format projects.
+A multi-skilled software engineer with excellent communication skills and a flair for learning new languages. Has excelled in the technically challenging video game industry. A team player with a can do attitude. Proven technical, scheduling and team working skills, on challenging multi-format projects. Occasional public speaker.
 
 </p>
 
-  
 
 <h2>Technology I use and like</h2>
 
@@ -32,7 +31,9 @@ A multi-skilled software engineer with excellent communication skills and a flai
       Over ten years development experience including five years commercial experience.
       I am the sole current maintainer of the Imagick extension and help maintain the Gmagick extension. 
       
-      I occasionally write RFCs to try and make PHP better. <a href="https://wiki.php.net/rfc/internal_constructor_behaviour">Constructor behaviour of internal classes</a> was accepted for PHP 7, the others target future versions of PHP.
+      I occasionally write RFCs to try and make PHP better. '<a href="https://wiki.php.net/rfc/internal_constructor_behaviour">Constructor behaviour of internal classes</a>' was accepted for PHP 7,
+      '<a href="https://wiki.php.net/rfc/closurefromcallable">Closure from callable</a>' targets PHP 7.1, and     
+      '<a href="https://wiki.php.net/rfc/consistent_callables">Consistent Callables</a>' targets PHP 8.
     </td>
   </tr>
 
@@ -66,8 +67,7 @@ A multi-skilled software engineer with excellent communication skills and a flai
       </strong>
     </td>
     <td style="padding-bottom: 1em; vertical-align:top; ">
-      Five years Java experience covering both J2SE, J2ME and J2EE for creating applications on mobile phones and Java
-      applets, and Spring based web application.
+      Five years Java experience covering both J2SE, J2ME and J2EE for creating applications on mobile phones and Java applets, and Spring based web application.
     </td>
   </tr>
 
@@ -98,21 +98,15 @@ A multi-skilled software engineer with excellent communication skills and a flai
       plugin Ant tasks for custom processes e.g. Manipulating assets, packaging and deploying applications. <br>
 
       <p>
-      Written and used Bash scripts and associated tools in PHP to allow deployment of a web application including all
-      database changes from a single command. Used Chef to create, configure and deploy to Amazon EC2 instances.
+      Written and used Bash scripts and associated tools in PHP to allow deployment of a web application including all database changes from a single command. Used Chef to create, configure and deploy to Amazon EC2 instances. These days though, I prefer to RPM everything and make deployment be as simple as possible.
       </p>
-      <p>
-        These days though I prefer to RPM everything and so deployment becomes trivial.
-      </p>
-      
     </td>
   </tr>
 
   </tbody>
 </table>
 
-<h2>Technology I have used and don't like quite as much</h2>
-
+<h2>Other technology I have used</h2>
 <table>
   <tbody>
   <tr>
@@ -197,9 +191,7 @@ A multi-skilled software engineer with excellent communication skills and a flai
       </strong>
     </td>
     <td style="padding-bottom: 1em; vertical-align:top; ">
-      Wireshark, Bugzilla, PR-tracker database, Footprints, IntelliJ Idea, Visual Studio, Visual Source Safe
-      user/administrator, Subversion, Git, PHPStorm, Metrowerks CodeWarrior, InstallShield, Microsoft Visual Sourcesafe,
-      Subversion, CVS, Git.
+      Amongst the tools I've used are Wireshark, Bugzilla, PR-tracker database, Footprints, IntelliJ Idea, Visual Studio, Visual Source Safe user/administrator, Subversion, Git, PHPStorm, Metrowerks CodeWarrior, InstallShield, Microsoft Visual Sourcesafe, Subversion, CVS, Git, strace, valgrind, gdb.
     </td>
   </tr>
 
@@ -224,13 +216,39 @@ A multi-skilled software engineer with excellent communication skills and a flai
 
 <h2>Open source development - previous to current</h2>
 
-<h3>Imagick + PHP internals</h3>
+<h3>PHP Imagick + Gmagick extensions</h3>
+
+<p>
+Since the start of 2014 I have been the sole maintainer of the PHP Imagick extension. This involved fixing a backlog of issues, adding new functions introduced in ImageMagick, and updating the extension for PHP 7. I also assisted the ImageMagick team in detecting and fixing a number of memory corruption issues. Recently added to the Gmagick maintainer list due to the number of contributions made.
+</p>
+
+<p>
+Developed a website <a href='http://phpimagick.com/'>phpmagick.com</a> to show working examples of all the functions in the extension.
+</p>
+
+<h3>PHP internals</h3>
+
+<p>
+</p>
 
 <h3>Auryn</h3>
 
 <p>
-  
-  
+Auryn <a href="https://github.com/rdlowrey/auryn">github.com/rdlowrey/auryn</a> is a recursive dependency injector, that can be used to bootstrap and wire together S.O.L.I.D. PHP applications. I helped design how this D.I.C. should work, as well as provide bug-fixes and write test cases. I spoke at the PHP South Coast confernce 2015 about how dependency injection makes code better. 
+</p>
+
+<h3>Jig</h3>
+
+<p>
+Developed the Jig templating library. This is a lightweight templating system that uses dependency injection to allow 'views' to be a first class layer inside PHP applications. The documentation is available at <a href="http://phpjig.com">phpjig.com</a>.
+
+</p>
+
+<h3>Tier</h3>
+
+<p>
+Developed the Tier 'application runner' framework. Tier is a new approach to structuring PHP applications to avoid monolithic frameworks, and allow multiple dispatch inside an application, which allows 'tiers' of code to be developed in a way that make it easy to write high-performance, easy-to-test code.
+<!--   Very minimal documentation is available at <a href="http://tier.phpjig.com/">tier.phpjig.com</a> -->
 </p>
 
 
@@ -363,22 +381,23 @@ Two months contract position at Web development company. Using PHP, implemented 
 <h2>B.Sc. in Chemistry and Molecular Physics, Second class. Nottingham University 1994–1997</h2> 
 
 <p>
-Main topics covered include Quantum Physics, Physical Chemistry, Optics, Nuclear Magnetic Resonance and both chemistry and physics laboratory work. For my third year chemistry project I wrote a computer program to simulate 'the spectra of solid state nuclear magnetic resonance experiments using magic angle spinning'.
+  Main topics covered include Quantum Physics, Physical Chemistry, Optics, Nuclear Magnetic Resonance and both chemistry and physics laboratory work. For my third year chemistry project I wrote a computer program to simulate 'the spectra of solid state nuclear magnetic resonance experiments using magic angle spinning'.
 </p>
 
-<h2>Four  A-levels Bristol Grammar School 1992–1994</h2>
+<h2>Four A-levels Bristol Grammar School 1992–1994</h2>
 
 <p>
-Physics - A, Maths - A, Chemistry - B, Further Maths - B.
+  Physics - A, Maths - A, Chemistry - B, Further Maths - B.
 </p>
 
 <h2>Ten G.C.S.E.s Bristol Grammar School 1987–1992</h2>
-<p>Ten G.C.S.E.s of maths, chemistry, biology, physics, French, German, Geography, History, English language and English literature.
+<p>
+  Ten G.C.S.E.s of maths, chemistry, biology, physics, French, German, Geography, History, English language and English literature.
 </p>
    
 <h2>Bristol Grammar School 1991, 92, 93</h2>
 <p>
-Gold, Silver and Gold certificates in the National Mathematics Contest.
+  Gold, Silver and Gold certificates in the National Mathematics Contest.
 </p>
 
 
