--- a/public/index.html
+++ b/public/index.html
@@ -37,11 +37,13 @@
 <a href="https://gist.github.com/Danack/5ae0b1b1ce30a0d785dd">Improved error control operator</a> - draft<br/>
 
 
+<h2>Blog</h2>
+
+My infrequently <a href="http://blog.basereality.com">updated blog</a>
+
 <h2>CV</h2>
 
-
-<a href="/CV.html">A CV that desperately needs revising</a><br/>
-
+<a href="/CV.html">A CV that isn't just a link to Github</a><br/>
 
 </body>
 </html>
