Added contact details why not.

--- a/public/CV.html
+++ b/public/CV.html
@@ -1,4 +1,3 @@
-<!-- saved from url=(0031)http://basereality.test:8080/CV -->
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -9,12 +8,26 @@
 <body >
 
 
-<h2>Profile</h2>
+<table>
 
-<p>
-A multi-skilled software engineer with excellent communication skills and a flair for learning new languages. Has excelled in the technically challenging video game industry. A team player with a can do attitude. Proven technical, scheduling and team working skills, on challenging multi-format projects. Occasional public speaker.
-
-</p>
+  <tr>
+    <td width="65%" valign="top">
+      <h2>Profile</h2>
+      <p>
+      A multi-skilled software engineer with excellent communication skills and a flair for learning new languages. Has excelled in the technically challenging video game industry. A team player with a can do attitude. Proven technical, scheduling and team working skills, on challenging multi-format projects. Occasional public speaker.
+      </p>
+   </td>
+    <td width="10%" valign="top">
+    </td>
+    <td width="25%" valign="top" align="right">
+      <h2>Contact</h2>
+      <p>
+        Danack@basereality.com <br/>
+        https://twitter.com/MrDanack <br/>
+      </p>
+    </td>
+  </tr>
+</table>
 
 
 <h2>Technology I use and like</h2>
@@ -213,7 +226,6 @@ A multi-skilled software engineer with excellent communication skills and a flai
 
 <h1>Career to date</h1>
 
-
 <h2>Open source development - previous to current</h2>
 
 <h3>PHP Imagick + Gmagick extensions</h3>
@@ -226,13 +238,7 @@ Since the start of 2014 I have been the sole maintainer of the PHP Imagick exten
 Developed a website <a href='http://phpimagick.com/'>phpmagick.com</a> to show working examples of all the functions in the extension.
 </p>
 
-<h3>PHP internals</h3>
-
-<p>
-</p>
-
 <h3>Auryn</h3>
-
 <p>
 Auryn <a href="https://github.com/rdlowrey/auryn">github.com/rdlowrey/auryn</a> is a recursive dependency injector, that can be used to bootstrap and wire together S.O.L.I.D. PHP applications. I helped design how this D.I.C. should work, as well as provide bug-fixes and write test cases. I spoke at the PHP South Coast confernce 2015 about how dependency injection makes code better. 
 </p>
