--- a/public/ValueCaseForUnitTests/index.html
+++ b/public/ValueCaseForUnitTests/index.html
@@ -510,9 +510,9 @@
     <table>
       <tr>
         <td>
-          Unit tests <span style="font-size: 56px">∝</span> Lines of code written
+          Unit tests <span style="font-size: 56px">∝</span> lines of code written
         </td>
-        <td>O(n) 
+        <td>O(n)
         </td>
       </tr>
   
