Changed CV words.

--- a/public/CV.html
+++ b/public/CV.html
@@ -14,7 +14,16 @@
     <td width="65%" valign="top">
       <h2>Profile</h2>
       <p>
+        An experienced programmer who has used multiple languages to write solid code that can be tested and performs well. I enjoy working with non-technical people to design and develop solutions that solve business problems.<br/>
+
+As the maintainer of two PHP extensions, I have a deep understanding of PHP internals and how to handle bug reports without causing compatibility problems for existing users.<br/>
+        
+I like to share my experience and help other people become better programmers by giving talks and helping people on online.  
+
+        <!-- 
       A multi-skilled software engineer with excellent communication skills and a flair for learning new languages. Has excelled in the technically challenging video game industry. A team player with a can do attitude. Proven technical, scheduling and team working skills, on challenging multi-format projects. Occasional public speaker.
+        -->
+        
       </p>
    </td>
     <td width="10%" valign="top">
@@ -24,6 +33,7 @@
       <p>
         Danack@basereality.com <br/>
         https://twitter.com/MrDanack <br/>
+        07473 305 865 
       </p>
     </td>
   </tr>
@@ -35,7 +45,7 @@
 <table>
   <tbody>
   <tr>
-    <td style="min-width: 160px; padding-bottom: 1em; vertical-align:top; ">
+    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
       <strong>
         PHP
       </strong>
@@ -51,61 +61,59 @@
   </tr>
 
   <tr>
-    <td style="min-width: 160px; padding-bottom: 1em; vertical-align:top; ">
+    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
       <strong>
         MySQL
       </strong>
     </td>
-    <td style="padding-bottom: 1em; vertical-align:top; ">
+    <td style="padding-bottom: 0.5em; vertical-align:top; ">
       MySQL table and query design for medium sized website with moderate load, to allow responsive user experience.
     </td>
   </tr>
 
   <tr>
-    <td style="min-width: 160px; padding-bottom: 1em; vertical-align:top; ">
+    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
       <strong>
         Javascript + jQuery + HTML + CSS
       </strong>
     </td>
-    <td style="padding-bottom: 1em; vertical-align:top; ">
+    <td style="padding-bottom: 0.5em; vertical-align:top; ">
       I use it make web pages have a good user experience. Apparently that's called Responsive Web Design these days.
     </td>
   </tr>
 
-
   <tr>
-    <td style="min-width: 160px; padding-bottom: 1em; vertical-align:top; ">
+    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
       <strong>
         Java
       </strong>
     </td>
-    <td style="padding-bottom: 1em; vertical-align:top; ">
+    <td style="padding-bottom: 0.5em; vertical-align:top; ">
       Five years Java experience covering both J2SE, J2ME and J2EE for creating applications on mobile phones and Java applets, and Spring based web application.
     </td>
   </tr>
 
-
   <tr>
-    <td style="min-width: 160px; padding-bottom: 1em; vertical-align:top; ">
+    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
       <strong>
         Templating
       </strong>
     </td>
-    <td style="padding-bottom: 1em; vertical-align:top; ">
+    <td style="padding-bottom: 0.5em; vertical-align:top; ">
        Created <a href="https://github.com/Danack/Jig">Jig templating library</a>, to allow dependency injection of objects directly from templates. Previously implemented Smarty templating to allow designers to create reusable web pages elements, and a framework to load the required pages, Javascript and CSS in a reliable design.
     </td>
   </tr>
   
   
   <tr>
-    <td style="min-width: 160px; padding-bottom: 1em; vertical-align:top; ">
+    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
       <strong>
         Automation with Ant/Bash/Chef/Puppet
       </strong>
     </td>
-    <td style="padding-bottom: 1em; vertical-align:top; ">
+    <td style="padding-bottom: 0.5em; vertical-align:top; ">
       <p>
-      Integrated continuous build and automated test systems with for rapid detection of development issues. Have used Cruise Control with Ant, and of Travi-CI for open source projects.</p>
+      Integrated continuous build and automated test systems with for rapid detection of development issues. Have used Cruise Control with Ant, and of Travis-CI for open source projects.</p>
       <p>
       Developed Ant scripts for building, automated testing and deploying of applications. Designed and implemented
       plugin Ant tasks for custom processes e.g. Manipulating assets, packaging and deploying applications. <br>
@@ -123,34 +131,34 @@
 <table>
   <tbody>
   <tr>
-    <td style="min-width: 160px; padding-bottom: 1em; vertical-align:top; ">
+    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
       <strong>
         C/C++
       </strong>
     </td>
-    <td style="padding-bottom: 1em; vertical-align:top; ">
+    <td style="padding-bottom: 0.5em; vertical-align:top; ">
       Five years of commercial development. Good understanding of C/C++ compiler technology
     </td>
   </tr>
 
   <tr>
-    <td style="min-width: 160px; padding-bottom: 1em; vertical-align:top; ">
+    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
       <strong>
         J2EE + Spring + Hibernate
       </strong>
     </td>
-    <td style="padding-bottom: 1em; vertical-align:top; ">
+    <td style="padding-bottom: 0.5em; vertical-align:top; ">
       Developed internal web based application for managing product pricing.
     </td>
   </tr>
 
   <tr>
-    <td style="min-width: 160px; padding-bottom: 1em; vertical-align:top; ">
+    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
       <strong>
         WAP/XHTML
       </strong>
     </td>
-    <td style="padding-bottom: 1em; vertical-align:top; ">
+    <td style="padding-bottom: 0.5em; vertical-align:top; ">
       Developed wapsites that used content adaption to optimise user experience based on handset capabilities.
     </td>
   </tr>
@@ -162,7 +170,7 @@
 <table>
   <tbody>
   <tr>
-    <td style="min-width: 160px; padding-bottom: 1em; vertical-align:top; ">
+    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
       <strong>
         Tech lead
       </strong>
@@ -174,12 +182,12 @@
   </tr>
 
   <tr>
-    <td style="min-width: 160px; padding-bottom: 1em; vertical-align:top; ">
+    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
       <strong>
         Optimisation
       </strong>
     </td>
-    <td style="padding-bottom: 1em; vertical-align:top; ">
+    <td style="padding-bottom: 0.5em; vertical-align:top; ">
       Experience of writing x386 assembler for low level, high performance graphics solutions, experience of debugging
       disassembly for MIPS, ARM and Pentium processors.
     </td>
@@ -187,34 +195,34 @@
 
 
   <tr>
-    <td style="min-width: 160px; padding-bottom: 1em; vertical-align:top; ">
+    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
       <strong>
         Source Control
       </strong>
     </td>
-    <td style="padding-bottom: 1em; vertical-align:top; ">
+    <td style="padding-bottom: 0.5em; vertical-align:top; ">
       Used and administered Microsoft Visual Source, Subversion and Git for source code version control.
     </td>
   </tr>
 
   <tr>
-    <td style="min-width: 160px; padding-bottom: 1em; vertical-align:top; ">
+    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
       <strong>
         Tools used
       </strong>
     </td>
-    <td style="padding-bottom: 1em; vertical-align:top; ">
+    <td style="padding-bottom: 0.5em; vertical-align:top; ">
       Amongst the tools I've used are Wireshark, Bugzilla, PR-tracker database, Footprints, IntelliJ Idea, Visual Studio, Visual Source Safe user/administrator, Subversion, Git, PHPStorm, Metrowerks CodeWarrior, InstallShield, Microsoft Visual Sourcesafe, Subversion, CVS, Git, strace, valgrind, gdb.
     </td>
   </tr>
 
   <tr>
-    <td style="min-width: 160px; padding-bottom: 1em; vertical-align:top; ">
+    <td style="min-width: 160px; padding-bottom: 0.5em; vertical-align:top; ">
       <strong>
         Continuous testing
       </strong>
     </td>
-    <td style="padding-bottom: 1em; vertical-align:top; ">
+    <td style="padding-bottom: 0.5em; vertical-align:top; ">
       Integrated continuous build and automated test systems with Cruise Control with Ant for rapid detection of
       development issues.
     </td>
@@ -222,7 +230,6 @@
   </tbody>
 </table>
 
-<p><span style="height: 30px">&nbsp;</span></p>
 
 <h1>Career to date</h1>
 
@@ -405,7 +412,5 @@ Two months contract position at Web development company. Using PHP, implemented 
 <p>
   Gold, Silver and Gold certificates in the National Mathematics Contest.
 </p>
-
-
 </body>
 </html>
