--- a/public/CV.html
+++ b/public/CV.html
@@ -18,7 +18,7 @@
 
 As the maintainer of two PHP extensions, I have a deep understanding of PHP internals and how to handle bug reports without causing compatibility problems for existing users.<br/>
         
-I like to share my experience and help other people become better programmers by giving talks and helping people on online.  
+I like to share my experience and help other people become better programmers by giving talks and helping people  online.  
 
         <!-- 
       A multi-skilled software engineer with excellent communication skills and a flair for learning new languages. Has excelled in the technically challenging video game industry. A team player with a can do attitude. Proven technical, scheduling and team working skills, on challenging multi-format projects. Occasional public speaker.
