--- a/public/CV.html
+++ b/public/CV.html
@@ -14,17 +14,19 @@
     <td width="65%" valign="top">
       <h2>Profile</h2>
       <p>
-        An experienced programmer who has used multiple languages to write solid code that can be tested and performs well. I enjoy working with non-technical people to design and develop solutions that solve business problems.<br/>
+        An experienced programmer who has used multiple languages to write solid code that can be tested and performs well. I enjoy working with non-technical people to design and develop solutions that solve business problems.</p>
 
-As the maintainer of two PHP extensions, I have a deep understanding of PHP internals and how to handle bug reports without causing compatibility problems for existing users.<br/>
-        
-I like to share my experience and help other people become better programmers by giving talks and helping people  online.  
+      <p>
+As the maintainer of two PHP extensions, I have a deep understanding of PHP internals and how to handle bug reports without causing compatibility problems for existing users.
+      </p>
+<p>  
+I like to share my experience and help other people become better programmers by giving talks and helping people online.
+</p>
 
         <!-- 
       A multi-skilled software engineer with excellent communication skills and a flair for learning new languages. Has excelled in the technically challenging video game industry. A team player with a can do attitude. Proven technical, scheduling and team working skills, on challenging multi-format projects. Occasional public speaker.
         -->
-        
-      </p>
+
    </td>
     <td width="10%" valign="top">
     </td>
