--- a/public/ValueCaseForUnitTests/index.html
+++ b/public/ValueCaseForUnitTests/index.html
@@ -630,7 +630,15 @@ This talk will help you:
   <blockquote cite="https://en.wikipedia.org/wiki/Goodhart%27s_law">
     Goodhart's law: “When a measure becomes a target, it ceases to be a good measure.”
   </blockquote>
-</section>     
+</section>
+
+
+<section>  
+  <p>
+"You don't have to do TDD in order to get it right," - the thing that TDD actually does is stop the programmer or manager from saying "right, the code works now, let's ship it and not worry about writing tests, or worrying about if the design is even going to be easy to test."
+  </p>
+</section>
+
 
             </div>
         </div>
