--- a/public/InterfaceSegregation/index.html
+++ b/public/InterfaceSegregation/index.html
@@ -839,9 +839,11 @@ function writeImageTempFile(TmpPath $tmpPath)
   $injector->share(new TmpPath(__DIR__.'/var/temp'));
 </code>
 </pre>
+  
+  <p>
+    Seems trivial - but removes semantically meaningless types from your application.
+  </p>
 </section>
-
-
 
 
 <!-- *************************** -->
