Added title for consistency.

--- a/public/InterfaceSegregation/index.html
+++ b/public/InterfaceSegregation/index.html
@@ -706,6 +706,7 @@ class SearchController
 
 
 <section>
+    <h2>Extracting a type</h2>
 <pre class="danackCode spaceTop" data-trim>
 <code class="php">
 class SearchOptions
