Moved test for article into docs repoe.

--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,7 @@
 
 <a href="/InterfaceSegregation/">Interface Segregation - for better code</a> <br/>
 
-
-
+<!-- <a href="/TestingWithAuryn/">Testing With Auryn</a> <br/> -->
 
 <h2>PHP RFC</h2>
 
