More words, and tidied CSS to give cleaner speak notes.

--- a/public/InterfaceSegregation/plugin/notes-server/notes.html
+++ b/public/InterfaceSegregation/plugin/notes-server/notes.html
@@ -67,6 +67,8 @@
 				.speaker-controls-notes.hidden {
 					display: none;
 				}
+        
+
 
 				.speaker-controls-time .label,
 				.speaker-controls-notes .label {
@@ -146,6 +148,12 @@
 				}
 			}
 
+      .speaker-controls-notes ul,
+      .speaker-controls-notes > ul, {
+        margin-top: 0px;
+        margin-bottom: 0px;
+      }
+
 		</style>
 	</head>
 
@@ -166,7 +174,7 @@
 			</div>
 
 			<div class="speaker-controls-notes hidden">
-				<h4 class="label">Notes</h4>
+				<!-- <h4 class="label">Notes</h4> -->
 				<div class="value"></div>
 			</div>
 		</div>
