--- a/public/InterfaceSegregation/plugin/notes/notes.html
+++ b/public/InterfaceSegregation/plugin/notes/notes.html
@@ -68,6 +68,12 @@
 				.speaker-controls-notes.hidden {
 					display: none;
 				}
+        
+        .speaker-controls-notes ul,
+        .speaker-controls-notes > ul, {
+          margin-top: 0px;
+          margin-bottom: 0px;
+        }
 
 				.speaker-controls-time .label,
 				.speaker-controls-notes .label {
@@ -167,7 +173,7 @@
 			</div>
 
 			<div class="speaker-controls-notes hidden">
-				<h4 class="label">Notes</h4>
+				<!-- <h4 class="label">Notes</h4> -->
 				<div class="value"></div>
 			</div>
 		</div>
