--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,13 @@
 <a href="/ValueCaseForUnitTests/">The value case for unit tests</a> <br/>
 <a href="/pdf/Composer_TheGoodTheBadAndTheUgly.pdf">Composer - the good, the bad and the ugly</a> <br/>
 <a href="/pdf/PHP_Traits.pdf">PHP Traits</a> <br/>
+<a href="/InterfaceSegregation/">Interface Segregation - for better code</a> April 13th 2016, PHPSW <br/>
 
 
 <h2>Draft talks</h2>
 
-<a href="/InterfaceSegregation/">Interface Segregation - for better code</a> <br/>
+
+<a href="/InterfaceSegregationLong/">Interface Segregation - for better code</a> - May 16th 2016 PHPBerks <br/>
 
 <!-- <a href="/TestingWithAuryn/">Testing With Auryn</a> <br/> -->
 
